- simplify aggregation query and change to column sizes
Signed-off-by: psmagin <pavlo_smahin@epam.com>